--- a/Pages/ProjectPlanPage.xaml
+++ b/Pages/ProjectPlanPage.xaml
@@ -16,7 +16,7 @@
             Padding="8" >
 
             <VerticalStackLayout>
-                <Label Text="Project Title" />
+                <Label x:Name="projectTitle" Text="Project Title" />
                 <Label Text="Project Deadline" />
             </VerticalStackLayout>
         </Border>
@@ -28,7 +28,7 @@
 
             <VerticalStackLayout>
                 <Label Text="Project Description" />
-                <Label Text="Well this project is just a text that will hopefully represent exactly how a fully set up project will look. An important part is making sure that this row can be scrolled away from because it's a bit obnoxious to have a big ol description box like this constantly in your face." />
+                <Label x:Name="projectDescription" Text="" />
             </VerticalStackLayout>
         </Border>
 
